1998-09-03  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Set LC_ALL rather than just LC_COLLATE.

Wed Sep  2 02:30:22 1998  Jim Kingdon  <kingdon@pennington.cyclic.com>

	* version.c: Bump version number to 1.10.1.1.

	* Version 1.10.1.

1998-09-01  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Administrative note regarding Noel's changes to allow one to
	switch from one CVS root to another in a single command: The
	ChangeLog entries for the changes which Noel just checked in
	appear for 1998-09-01, 1998-08-28, 1998-08-25, 1998-08-19, and
	1998-08-18, rather than being all together.

	* main.c (set_root_directory): Fix whitespace.
	(main): Nuke new -m option and just have that message controlled
	by -t.
	* server.c (server): Revert the CVS_SERVER_SLEEP code back the way
	it was in CVS 1.10.  Attaching to the parent process is relatively
	boring (you can just run "cvs server" under a debugger instead),
	but connecting to the child process is what the old code was for.
	* recurse.c, server.c: Remove DEBUG_NJC code.

1998-09-01  Noel Cragg  <noel@swish.red-bean.com>

	* server.c (do_cvs_command): add another environment variable,
	CVS_SERVER_SLEEP2, after forking to pause the program so one can
	attach a debugger.

	* sanity.sh (crerepos): clean up crerepos-18 now that multiroot
	works in this case.
	(multiroot): finalize tests for local vs. remote operation.

	* recurse.c (start_recursion): near the beginning, save the list
	of directories to spoof as command-line arguments, if necessary.
	Use that list near the end and call send_file_names to send those
	arguments to the server.
	(do_argument_proc): removed, since we call send_file_names now.

	* main.c (main): re-initialize dirs_sent_to_server on each pass
	through the loop for each CVSROOT.

	* cvs.h: add proto for global variable which keeps track of which
	directories have been sent to the server when in client mode.

	* client.c (is_arg_a_parent_or_listed_dir): new function.